Fix contrast errors

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,9 @@
 $primary-accent-color: #7B4734;
-$secondary-accent-color: #867C77;
+$secondary-accent-color: #5D5451;
 $ternary-accent-color: #D9CFC9;
 
 $primary-background-color: #F4F4F4;
-$secondary-background-color: #58889C;
+$secondary-background-color: #507C8F;
 $ternary-background-color: #FFFFFF;
 
 $primary-text-color: #FFFFFF;
