--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -119,12 +119,12 @@ body {
   padding: 0;
   width: 3.5rem;
   height: 0.75rem;
-  background-color: #867C77;
+  background-color: #5D5451;
   color: #FFFFFF;
   padding: 1rem;
   border: none;
   border-radius: 30px;
-  background-color: #58889C;
+  background-color: #507C8F;
   border-radius: 0.5rem;
   font-size: 1rem;
   font-weight: 600;
@@ -176,7 +176,7 @@ body {
 .nav__header {
   display: flex;
   justify-content: space-between;
-  background-color: #58889C;
+  background-color: #507C8F;
   position: relative;
   z-index: 3;
   width: 100%;
@@ -214,7 +214,7 @@ body {
   height: 100vh;
   margin: 0;
   list-style: none;
-  background-color: #58889C;
+  background-color: #507C8F;
   width: 100px;
   position: fixed;
   padding: 2.5rem;
@@ -373,7 +373,7 @@ body {
   justify-content: space-evenly;
 }
 .details-order-form .details-order-form__selection-pair .details-order-form__faded {
-  color: #867C77;
+  color: #5D5451;
   opacity: 0.8;
 }
 .details-order-form .details-order-form__selection-pair select {
@@ -397,7 +397,7 @@ body {
 }
 .details-order-form .details-order-form__btn-container .details-order-form__submit-btn,
 .details-order-form .details-order-form__btn-container .details-order-form__faded-btn {
-  background-color: #867C77;
+  background-color: #5D5451;
   color: #FFFFFF;
   padding: 1rem;
   border: none;
@@ -586,7 +586,7 @@ body {
   margin: 0 5%;
 }
 .bag .bag__button {
-  background-color: #867C77;
+  background-color: #5D5451;
   color: #FFFFFF;
   padding: 1rem;
   border: none;
@@ -739,7 +739,7 @@ body {
 }
 .size-options-container input:checked + label {
   border: none;
-  background-color: #867C77;
+  background-color: #5D5451;
   color: white;
 }
 .size-options-container input {
@@ -772,7 +772,7 @@ body {
   font-weight: 700;
   letter-spacing: 0.5px;
   min-height: 100vh;
-  background-color: #58889C;
+  background-color: #507C8F;
 }
 .about .about__header {
   display: flex;
@@ -863,13 +863,13 @@ body {
   margin-top: 2rem;
   padding: 8px 10px;
   width: 6rem;
-  background-color: #867C77;
+  background-color: #5D5451;
   color: #FFFFFF;
   padding: 1rem;
   border: none;
   border-radius: 30px;
   text-decoration: none;
-  background-color: #867C77;
+  background-color: #5D5451;
   color: #FFFFFF;
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
@@ -914,7 +914,7 @@ body {
 
 .footer {
   height: 15vh;
-  background-color: #58889C;
+  background-color: #507C8F;
   display: flex;
   flex-direction: column;
   align-items: center;
